--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>|I{G}M|  Shop</title>
+<title>|I{G}M| AUTOMIX Shop</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Purchase Your Privilges for India's Fastest Growing CS Community. " />
@@ -36,19 +36,18 @@
 
 <div class="main">
 	<div class="padding-w3l">
-	  <h1>|I{G}M| Shop </h1>
+	  <h1>|I{G}M| AUTOMIX Shop </h1>
 		<div class="content">
 			<div class="grid1">
 				<div class="header">
-					<h3>VIP</h3>
+					<h3>ADMIN</h3>
 					<h5> <span>Rs.</span>50</h5>
 				</div>
 				<div class="info-agile">
-					<p> <span>Free</span> 	Equipments</p>
-					
-					<p> <span>Free</span> 	Guns</p>
-					<p> <span>Increasing</span> 		Hp on Kill</p>
-					<p> <span>VIP</span> 	Tag</p>
+					<p> <span>START/STOP </span> RIGHTS</p>
+					<p> <span>KICK </span> RIGHTS</p>
+					<p> <span>SLAP/SLAY </span> RIGHTS</p>
+				        <p> <span>ADMIN</span> 	CHAT</p>
 					<p class="text"><span>	24/7</span> Support</p>
 				</div>
 				<div class="submit">
@@ -59,15 +58,13 @@
 			
 			<div class="grid2">
 				<div class="header">
-					<h3>ADMIN</h3>
+					<h3>HEAD ADMIN</h3>
 					<h5> <span>Rs.</span>100</h5>
 				</div>
 				<div class="info-agile">
-					<p><span>All</span> VIP Rights</p>
+					<p><span>All</span> ADMIN Rights</p>
                                         <p><span>Admin Chat</span> Access</p>
-					<p><span>ADMIN</span> Tag</p>
-					<p><span>BAN</span> Rights</p> 
-					<p><span>Slap/Slay</span> Rights</p>
+					<p> <span>FULL </span> IMMUNITY</p>
 					<p class="text"><span>24/7</span> Support</p>
 				</div>
 				<div class="submit">
@@ -75,23 +72,7 @@
 				</div>
 			</div>
 			
-			<div class="grid3">
-				<div class="header">
-					<h3>SUPER ADMIN</h3>
-					<h5> <span>Rs.</span>150</h5>
-				</div>
-				<div class="info-agile">
-					<p><span>All</span> ADMIN Rights</p>
-					<p><span>Immunity</span> From Cmds</p>
-					<p><span>SuperAdmin</span> Tag</p>
-					<p><span>PUB War Start</span> Access</p>					
-					<p><span>Special Round</span> Access</p>
-					<p class="text"><span>24/7</span> Support</p>
-				</div>
-				<div class="submit">
-					<a class=" sign-up popup-with-zoom-anim" href="#small-dialog">Pay</a>
-				</div>
-			</div>
+			
 		
 		  <div class="clear"> </div>
 		</div>
