--- a/index.html
+++ b/index.html
@@ -91,6 +91,25 @@
 			</div>
 			
 			
+			<div class="grid3">
+				<div class="header">
+					<h3>CO-OWNER</h3>
+					<h5> <span>Rs.</span>150</h5>
+				</div>
+				<div class="info-agile">
+					<p><span>All</span> HEAD ADMIN Rights</p>
+					<p><span>Immunity</span> From Cmds</p>
+					<p><span>MANAGER MENU</span> ACCESS</p>
+					<p><span>CORE GROUP</span> MEMBER</p>
+					
+					
+					<p class="text"><span>24/7</span> Support</p>
+				</div>
+				<div class="submit">
+					<a class=" sign-up popup-with-zoom-anim" href="#small-dialog">Pay</a>
+				</div>
+			</div>
+			
 		
 		  <div class="clear"> </div>
 		</div>
