--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
 			<div class="grid1">
 				<div class="header">
 					<h3>ADMIN</h3>
-					<h5> <span>Rs.</span>50</h5>
+					<h5> <span>Rs.</span>FREE NOW</h5>
 				</div>
 				<div class="info-agile">
 					<p> <span>START/STOP </span> RIGHTS</p>
 					<p> <span>KICK </span> RIGHTS</p>
+					<p> <span>BAN </span> RIGHTS</p>
 					<p> <span>SLAP/SLAY </span> RIGHTS</p>
 				        <p> <span>ADMIN</span> 	CHAT</p>
 					<p class="text"><span>	24/7</span> Support</p>
@@ -59,7 +60,7 @@
 			<div class="grid2">
 				<div class="header">
 					<h3>HEAD ADMIN</h3>
-					<h5> <span>Rs.</span>100</h5>
+					<h5> <span>Rs.</span>50</h5>
 				</div>
 				<div class="info-agile">
 					<p><span>All</span> ADMIN Rights</p>
@@ -76,7 +77,7 @@
 			<div class="grid3">
 				<div class="header">
 					<h3>CO-OWNER</h3>
-					<h5> <span>Rs.</span>150</h5>
+					<h5> <span>Rs.</span>100</h5>
 				</div>
 				<div class="info-agile">
 					<p><span>All</span> HEAD ADMIN Rights</p>
