--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="grid1">
 				<div class="header">
 					<h3>ADMIN</h3>
-					<h5> <span>Rs.</span>FREE NOW</h5>
+					<h5> <span>Rs.</span>FREE AT PRESENT</h5>
 				</div>
 				<div class="info-agile">
 					<p> <span>START/STOP </span> RIGHTS</p>
