--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>|I{G}M| AUTOMIX Shop</title>
+<title>Anonymous Multimod Shop</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Purchase Your Privilges for India's Fastest Growing CS Community. " />
