--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <div class="main">
 	<div class="padding-w3l">
-	  <h1>|I{G}M| AUTOMIX Shop </h1>
+	  <h1>Anonymous Multimod Shop </h1>
 		<div class="content">
 			<div class="grid1">
 				<div class="header">
