--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="grid1">
 				<div class="header">
 					<h3>ADMIN</h3>
-					<h5> <span>Rs.</span>FREE AT PRESENT</h5>
+					<h5> <span>Rs.</span>100</h5>
 				</div>
 				<div class="info-agile">
 					<p> <span>START/STOP </span> RIGHTS</p>
@@ -60,7 +60,7 @@
 			<div class="grid2">
 				<div class="header">
 					<h3>HEAD ADMIN</h3>
-					<h5> <span>Rs.</span>50</h5>
+					<h5> <span>Rs.</span>150</h5>
 				</div>
 				<div class="info-agile">
 					<p><span>All</span> ADMIN Rights</p>
@@ -77,7 +77,7 @@
 			<div class="grid3">
 				<div class="header">
 					<h3>CO-OWNER</h3>
-					<h5> <span>Rs.</span>100</h5>
+					<h5> <span>Rs.</span>200</h5>
 				</div>
 				<div class="info-agile">
 					<p><span>All</span> HEAD ADMIN Rights</p>
@@ -104,7 +104,7 @@
                                                                 <p>This gives you Privilege for 1 Whole Month</p>
 								<ul>
 									
-                                                                        <li>FOR PAYING CONTACT : 9680049988</li>
+                                                                        <li>FOR PAYING CONTACT : 9424674446</li>
 									
                                                                         <li>Still not activated ? Contact Here on FB : <a href="https://www.facebook.com/harsh.ojha.33" target="_blank">Click</a></li>
 								</ul>
@@ -116,7 +116,7 @@
 		<!--pop-up-grid-->
 		
 		<div class="footer-w3agile">
-			<p>© 2017 |I{G}M| SHOP. All Rights Reserved | Designed by  <a href="https://fb.com/varunmal007" target="_blank">  Varun </a></p>
+			<p>© 2017 Anonymous Multimod SHOP. All Rights Reserved | Designed by  <a href="https://fb.com/varunmal007" target="_blank">  Varun </a></p>
 		</div>
 		
 	</div>
