--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		<!--pop-up-grid-->
 		
 		<div class="footer-w3agile">
-			<p>© 2017 Anonymous Multimod SHOP. All Rights Reserved | Designed by  <a href="https://fb.com/varunmal007" target="_blank">  Varun </a></p>
+			<p>© 2017 Anonymous Multimod SHOP. All Rights Reserved | Designed by  <a href="https://fb.com/varunmal007" target="_blank">  Instinct </a></p>
 		</div>
 		
 	</div>
